# TextBridge

./: .gitignore  CMakeLists.txt  README.md  README_CN.md
.github/workflows/: release.yml
scripts/: release.sh
src/: CMakeLists.txt  bootmanager.cpp  bootmanager.h  configmanager.cpp  configmanager.h  historymanager.cpp  historymanager.h  inputwindow.cpp  inputwindow.h  keyboardhook.cpp  keyboardhook.h  main.cpp  resources.qrc  trayiconmanager.cpp  trayiconmanager.h
src/resources/qss/: center_widget_style.qss  inputwindow_style.qss  plain_text_edit_style.qss  up_pushbtn_style.qss
